Animals - 피드백 반영

--- a/animals/index.html
+++ b/animals/index.html
@@ -6,19 +6,17 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <div class="animal-wrap">
-            <div class="animal-images">
+        <div class="wrapper">
+            <div class="animal">
                 <img src="images/animal07.png" alt="여우 캐릭터" />
-                <img class="land-img" src="images/green.png" alt="" />
             </div>
-            <div class="animal-text">
+            <div class="ground">
                 <h1>Fox</h1>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Ducimus asperiores sed a consequatur quod! Quae, error,
-                    placeat explicabo quidem dignissimos nostrum totam pariatur
-                    voluptatibus harum ad necessitatibus. Incidunt, expedita.
-                    Molestiae?
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Repellat iste incidunt, labore velit perspiciatis, ad non,
+                    accusamus odio ipsum totam ratione facere debitis adipisci
+                    dolor libero. Ipsa explicabo aspernatur iusto.
                 </p>
             </div>
         </div>
