--- a/login/index.html
+++ b/login/index.html
@@ -8,11 +8,12 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <article class="cont-login">
+        <section class="cont-login">
+            <h2 class="blind">로그인 화면</h2>
             <p class="txt-info">더 편리해진 위니브에 오신 것을 환영합니다.</p>
-            <a class="btn-login" href="#">
+            <button class="btn-login" type="button">
                 <img src="images/weniv-logo.png" alt="위니브" /> 로그인
-            </a>
+            </button>
 
             <div class="menu">
                 <div class="find">
@@ -24,6 +25,6 @@
                     <a href="#">회원가입</a>
                 </div>
             </div>
-        </article>
+        </section>
     </body>
 </html>
