--- a/login/index.html
+++ b/login/index.html
@@ -15,7 +15,7 @@
                 <img src="images/weniv-logo.png" alt="위니브" /> 로그인
             </button>
 
-            <div class="menu">
+            <div class="clearfix menu">
                 <div class="find">
                     <img class="icon lock" src="images/icon-lock.png" alt="" />
                     <a href="#">아이디</a> | <a href="#">비밀번호찾기</a>
