--- a/zigzag/index.html
+++ b/zigzag/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html>
     <head>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap"
+            rel="stylesheet"
+        />
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
@@ -10,8 +14,8 @@
             <header class="header">
                 <h1 class="header-title">
                     START YOUR
-                    <strong>PORTFOLIO</strong>
-                    <strong>PROJECT</strong>
+                    <span>PORTFOLIO</span>
+                    <span>PROJECT</span>
                 </h1>
                 <p class="header-content">
                     Lorem Ipsum is simply dummy text of the printing and<br />
@@ -20,7 +24,6 @@
                     printer took a galley of type and scrambled
                 </p>
             </header>
-            <main class="main"></main>
         </section>
     </body>
 </html>
