지그재그 - main 마크업 및 스타일 적용

--- a/zigzag/index.html
+++ b/zigzag/index.html
@@ -10,7 +10,9 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
+        <!-- wrapper -->
         <section class="wrapper">
+            <!-- header -->
             <header class="header">
                 <h1 class="header-title">
                     START YOUR
@@ -24,6 +26,100 @@
                     printer took a galley of type and scrambled
                 </p>
             </header>
+            <!-- //header -->
+            <!-- main -->
+            <main class="main">
+                <ul class="project-list">
+                    <li class="project-item">
+                        <!-- project-item Rest-->
+                        <div class="project-deco">
+                            <p class="project-keyword">Rest</p>
+                            <img
+                                src="images/photo01.png"
+                                alt=""
+                                class="project-img"
+                            />
+                        </div>
+                        <div class="project-contents">
+                            <h2 class="project-title">Take a rest</h2>
+                            <ul class="content-list">
+                                <li class="content">
+                                    It has survived not only five centuries.
+                                </li>
+                                <li class="content">Why do we use it?</li>
+                                <li class="content">
+                                    Contray to popular belief, Lorem ipsum is
+                                    not simply random text. It has root.
+                                </li>
+                            </ul>
+                        </div>
+                        <!-- //projet-item Rest-->
+                    </li>
+                    <li class="project-item">
+                        <!-- project-item Craft-->
+                        <div class="project-contents">
+                            <h2 class="project-title">Build something</h2>
+                            <ul class="content-list">
+                                <li class="content">
+                                    There are many variations of passages of
+                                    Lorem Ipsum available.
+                                </li>
+                                <li class="content">
+                                    If you are going to use a passage of Lorem
+                                    Ipsum.
+                                </li>
+                                <li class="content">
+                                    The standard chunk of Lorem Ipsum used since
+                                    the 1500s is reproduced below for those
+                                    interested.
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="project-deco">
+                            <p class="project-keyword">Craft</p>
+                            <img
+                                src="images/photo02.png"
+                                alt=""
+                                class="project-img"
+                            />
+                        </div>
+                        <!-- //projet-item Craft-->
+                    </li>
+                    <li class="project-item">
+                        <!-- project-item Scrap-->
+                        <div class="project-deco">
+                            <p class="project-keyword">Scrap</p>
+                            <img
+                                src="images/photo03.png"
+                                alt=""
+                                class="project-img"
+                            />
+                        </div>
+                        <div class="project-contents">
+                            <h2 class="project-title">Reference</h2>
+                            <ul class="content-list">
+                                <li class="content">
+                                    Once is therefore always free form
+                                    repetition, injected humor, or
+                                    non-characterisic words etc.
+                                </li>
+                                <li class="content">
+                                    Predefined chunks as necessary, making this
+                                    the first true generator on the internet.
+                                </li>
+                                <li class="content">
+                                    Finibus Bonorum et Malorum by Cicero are
+                                    also reproduced in their exact original
+                                    form.
+                                </li>
+                            </ul>
+                        </div>
+                        <!-- //projet-item Scrap-->
+                    </li>
+                </ul>
+            </main>
+            <!-- //main -->
         </section>
+        <!-- //section -->
     </body>
 </html>
