지그재그 - 주석 추가

--- a/zigzag/index.html
+++ b/zigzag/index.html
@@ -29,6 +29,7 @@
             <!-- //header -->
             <!-- main -->
             <main class="main">
+                <!-- project-list -->
                 <ul class="project-list">
                     <li class="project-item">
                         <!-- project-item Rest-->
@@ -117,6 +118,7 @@
                         <!-- //projet-item Scrap-->
                     </li>
                 </ul>
+                <!-- //project-list -->
             </main>
             <!-- //main -->
         </section>
