지그재그 - 리팩토링

--- a/zigzag/index.html
+++ b/zigzag/index.html
@@ -20,9 +20,9 @@
                     <span>PROJECT</span>
                 </h1>
                 <p class="header-content">
-                    Lorem Ipsum is simply dummy text of the printing and<br />
-                    typesetting industry. Lorem Ipsum has been the industry's<br />
-                    standard dummy text ever since the 1500s, when an unknown<br />
+                    Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry. Lorem Ipsum has been the industry's
+                    standard dummy text ever since the 1500s, when an unknown
                     printer took a galley of type and scrambled
                 </p>
             </header>
