--- a/login/index.html
+++ b/login/index.html
@@ -8,22 +8,19 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <section class="cont-login">
-            <h2 class="blind">로그인 화면</h2>
+        <section class="cont-login clearfix">
+            <h2 class="txt-hide">위니브 로그인</h2>
             <p class="txt-info">더 편리해진 위니브에 오신 것을 환영합니다.</p>
             <button class="btn-login" type="button">
-                <img src="images/weniv-logo.png" alt="위니브" /> 로그인
+                <img src="images/svg/weniv-logo.svg" alt="위니브" /> 로그인
             </button>
-
-            <div class="clearfix menu">
-                <div class="find">
-                    <img class="icon lock" src="images/icon-lock.png" alt="" />
-                    <a href="#">아이디</a> | <a href="#">비밀번호찾기</a>
-                </div>
-                <div class="join">
-                    <img class="icon user" src="images/icon-user.png" alt="" />
-                    <a href="#">회원가입</a>
-                </div>
+            <div class="find">
+                <img class="icon" src="images/svg/icon-lock.svg" alt="" />
+                <a href="#">아이디</a> | <a href="#">비밀번호찾기</a>
+            </div>
+            <div class="join">
+                <img class="icon" src="images/svg/icon-user.svg" alt="" />
+                <a href="#">회원가입</a>
             </div>
         </section>
     </body>
