--- a/login/index.html
+++ b/login/index.html
@@ -5,22 +5,29 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>위니브 로그인</title>
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="style/reset.css" />
+        <link rel="stylesheet" href="style/style.css" />
     </head>
     <body>
         <section class="cont-login clearfix">
             <h2 class="txt-hide">위니브 로그인</h2>
-            <p class="txt-info">더 편리해진 위니브에 오신 것을 환영합니다.</p>
-            <button class="btn-login" type="button">
-                <img src="images/svg/weniv-logo.svg" alt="위니브" /> 로그인
-            </button>
+            <p class="txt-login">더 편리해진 위니브에 오신 것을 환영합니다.</p>
+            <a class="link-login" type="button">
+                <img
+                    src="images/weniv-logo.png"
+                    alt="위니브"
+                    class="img-login"
+                />
+                로그인
+            </a>
             <div class="find">
-                <img class="icon" src="images/svg/icon-lock.svg" alt="" />
-                <a href="#">아이디</a> | <a href="#">비밀번호찾기</a>
+                <img class="img-find" src="images/icon-lock.png" alt="" />
+                <a href="#" class="link-id">아이디</a>
+                <a href="#" class="link-pw">비밀번호찾기</a>
             </div>
             <div class="join">
-                <img class="icon" src="images/svg/icon-user.svg" alt="" />
-                <a href="#">회원가입</a>
+                <img class="img-join" src="images/icon-user.png" alt="" />
+                <a href="#" class="link-join">회원가입</a>
             </div>
         </section>
     </body>
