--- a/zigzag/index.html
+++ b/zigzag/index.html
@@ -7,6 +7,7 @@
             href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap"
             rel="stylesheet"
         />
+        <link rel="stylesheet" href="reset.css" />
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
