--- a/login/index.html
+++ b/login/index.html
@@ -9,26 +9,11 @@
         <link rel="stylesheet" href="style/style.css" />
     </head>
     <body>
-        <section class="cont-login clearfix">
-            <h2 class="txt-hide">위니브 로그인</h2>
-            <p class="txt-login">더 편리해진 위니브에 오신 것을 환영합니다.</p>
-            <a class="link-login" type="button">
-                <img
-                    src="images/weniv-logo.png"
-                    alt="위니브"
-                    class="img-login"
-                />
-                로그인
-            </a>
-            <div class="find">
-                <img class="img-find" src="images/icon-lock.png" alt="" />
-                <a href="#" class="link-id">아이디</a>
-                <a href="#" class="link-pw">비밀번호찾기</a>
-            </div>
-            <div class="join">
-                <img class="img-join" src="images/icon-user.png" alt="" />
-                <a href="#" class="link-join">회원가입</a>
-            </div>
-        </section>
+        <article class="cont-login clearfix">
+            <h2><img src="images/weniv-logo.svg" alt="위니브" /></h2>
+            <p class="txt-login">위니브를 더 즐겁고 편리하게 이용하세요.</p>
+
+            <button class="btn-login">로그인</button>
+        </article>
     </body>
 </html>
