로그인 - 모달창 생성

--- a/login/index.html
+++ b/login/index.html
@@ -15,5 +15,24 @@
 
             <button class="btn-login">로그인</button>
         </article>
+
+        <article class="cont-modal">
+            <header class="header">
+                <h2 class="tit-modal">로그인 또는 회원가입</h2>
+                <button class="btn-close"><img src="images/close.svg" alt="" /></button>
+            </header>
+            <div class="login">
+                <p class="txt-info">위니브에서 여러분의 궁금증을 해결하세요! :)</p>
+                <form action="#" class="form-login">
+                    <input type="text" required placeholder="아이디" class="inp_id" />
+                    <input type="text" required placeholder="비밀번호" class="inp_pw" />
+                    <input type="checkbox" id="inpHold" class="inp-hold txt-hide" />
+                    <label for="inpHold" class="labl-hold">로그인 상태 유지</label>
+                    <button class="btn-login">로그인</button>
+                </form>
+                <a href="#" class="link-join">회원가입</a>
+                <a href="#" class="link-find">아이디/비민번호 찾기</a>
+            </div>
+        </article>
     </body>
 </html>
