--- a/Tailwind-resume/resume.html
+++ b/Tailwind-resume/resume.html
@@ -8,106 +8,234 @@
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
     <body class="bg-yellow-100">
-        <div id="main" class="m-5 md:m-20 border-2 border-black rounded bg-white">
-            <div class="flex items-center h-5 border-b-2 border-black">
-                <div class="w-2 h-2 ml-1 rounded-full bg-red-500"></div>
-                <div class="w-2 h-2 ml-1 rounded-full bg-yellow-500"></div>
-                <div class="w-2 h-2 ml-1 rounded-full bg-green-500"></div>
+        <div id="main" class="relative m-5 border-2 border-black rounded bg-white">
+            <div class="flex items-center h-5 md:h-8 border-b-2 border-black">
+                <div class="w-2 h-2 md:w-3 md:h-3 md:ml-3 ml-1 rounded-full bg-red-500"></div>
+                <div class="w-2 h-2 md:w-3 md:h-3 md:ml-2 ml-1 rounded-full bg-yellow-500"></div>
+                <div class="w-2 h-2 md:w-3 md:h-3 md:ml-2 ml-1 rounded-full bg-green-500"></div>
             </div>
-            <section id="resume">
+
+            <section id="resume" class="p-5 md:p-32 flex flex-col justify-start gap-5 md:gap-10">
                 <h1 class="invisible">이력서</h1>
-                <section class="grid grid-cols-1 md:grid-cols-2 items-center text-center gap-4 p-5 pt-10">
-                    <h2 class="text-2xl">
-                        즐기며 도전하는 개발자<br />
-                        백경현입니다
+                <section class="relative grid grid-cols-1 md:grid-cols-3 justify-center gap-10 md:gap-24">
+                    <h2 class="text-3xl md:text-7xl text-center md:col-span-2">
+                        도전을 즐기는<br />
+                        개발자
+                        <span class="absolute -ml-0.5 mt-3 w-24 h-6 bg-yellow-200 md:w-48 md:h-12"></span>
+                        <span class="text-4xl md:text-7xl relative d">백경현</span>
+                        입니다
                     </h2>
-                    <img class="w-48 rounded-full" src="img/user_profile.jpg" alt="" />
-                    <div>
-                        <h2>about</h2>
+                    <img class="m-auto md:m-0 w-48 md:w-60 rounded-full" src="img/user_profile.jpg" alt="" />
+                    <div class="md:col-span-2">
+                        <h3
+                            class="mb-2 md:mb-3 text-2xl md:text-3xl text-[#35C4ED] font-semibold after:content-[' '] after:inline-block after:w-1.5 after:h-1.5 after:bg-[#35C4ED] after:align-text-top after:rounded-full after:-ml-1"
+                        >
+                            About
+                        </h3>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit laborum eaque voluptatibus minus itaque sed provident id atque,
-                            libero voluptates, totam cupiditate, iusto nihil ex accusantium illo laboriosam ducimus accusamus?
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam culpa cum voluptatibus modi voluptate, a molestiae corrupti ullam
+                            nihil sequi pariatur consequuntur inventore aliquid sint laborum! Consequatur impedit eum accusantium.
                         </p>
                     </div>
                     <div>
-                        <h2>Contact</h2>
-                        <div class="grid grid-cols-2">
-                            <p>Email.</p>
-                            <a href="mailto:xxx@naver.com">xxx@naver.com</a>
-                            <p>Phone.</p>
-                            <a href="tel:010-0000-0000">010-0000-0000</a>
-                            <p>GitHub.</p>
-                            <a href="#">xxx.github.com</a>
-                            <p>Blog.</p>
-                            <a href="#">xxx.velog.io</a>
+                        <h3
+                            class="mb-2 md:mb-3 text-2xl md:text-3xl text-[#35C4ED] font-semibold after:content-[' '] after:inline-block after:w-1.5 after:h-1.5 after:bg-[#35C4ED] after:align-text-top after:rounded-full after:-ml-1"
+                        >
+                            Contact
+                        </h3>
+                        <div class="grid grid-cols-3 pl-3 gap-1">
+                            <p class="text-gray-500">Email</p>
+                            <a class="col-span-2 font-semibold" href="mailto:xxx@naver.com">xxx@naver.com</a>
+                            <p class="text-gray-500">Phone</p>
+                            <a class="col-span-2 font-semibold" href="tel:010-0000-0000">010-0000-0000</a>
+                            <p class="text-gray-500">GitHub</p>
+                            <a class="col-span-2 font-semibold" href="#">xxx.github.com</a>
+                            <p class="text-gray-500">Blog</p>
+                            <a class="col-span-2 font-semibold" href="#">xxx.velog.io</a>
                         </div>
                     </div>
                 </section>
-
                 <hr />
 
                 <section>
-                    <h2>Skills</h2>
-                    <section>
-                        <h3>FrontEnd</h3>
-                        <div>
-                            <img class="w-10" src="img/html.svg" alt="HTML" />
-                            <img class="w-10" src="img/css.svg" alt="CSS" />
-                            <img class="w-10" src="img/sass.png" alt="SASS" />
-                            <img class="w-10" src="img/tailwind.png" alt="Tailwind" />
-                            <img class="w-10" src="img/js.svg" alt="JavaScript" />
-                            <img class="w-10" src="img/ts.svg" alt="TypeScript" />
-                            <img class="w-10" src="img/react.svg" alt="React" />
-                            <img class="w-10" src="img/b.svg" alt="Bootstrap" />
-                        </div>
-                    </section>
-                    <section>
-                        <h3>BackEnd</h3>
-                        <div>
-                            <img class="w-10" src="img/js.svg" alt="JavaScript" />
-                            <img class="w-10" src="img/ts.svg" alt="TypeScript" />
-                            <img class="w-10" src="img/node.svg" alt="Node JS" />
-                            <img class="w-10" src="img/express.svg" alt="Express JS" />
-                            <img class="w-10" src="img/mongo.svg" alt="Mongo DB" />
-                            <img class="w-10" src="img/ts.svg" alt="TypeScript" />
-                            <img class="w-10" src="img/react.svg" alt="React" />
-                            <img class="w-10" src="img/b.svg" alt="Bootstrap" />
-                        </div>
-                        <section>
-                            <h3>DevOps</h3>
-                            <div>
-                                <img class="w-10" src="img/git.svg" alt="Git" />
-                                <img class="w-10" src="img/aws.svg" alt="AWS" />
+                    <h2
+                        class="mb-2 md:mb-3 text-2xl md:text-3xl text-[#35C4ED] font-semibold after:content-[' '] after:inline-block after:w-1.5 after:h-1.5 after:bg-[#35C4ED] after:align-text-top after:rounded-full after:-ml-1"
+                    >
+                        Skills
+                    </h2>
+                    <div class="p-1 flex flex-col gap-5 md:gap-20 md:flex-row">
+                        <section class="p-1 md:w-1/3">
+                            <h3 class="mb-3 text-lg font-semibold">FrontEnd</h3>
+                            <div class="p-3 rounded flex flex-wrap gap-3 shadow-md md:gap-5 justify-center">
+                                <img class="w-12" src="img/html.svg" alt="HTML" />
+                                <img class="w-12" src="img/css.svg" alt="CSS" />
+                                <img class="w-12" src="img/sass.png" alt="SASS" />
+                                <img class="w-12" src="img/tailwind.png" alt="Tailwind" />
+                                <img class="w-12" src="img/js.svg" alt="JavaScript" />
+                                <img class="w-12" src="img/ts.svg" alt="TypeScript" />
+                                <img class="w-12" src="img/react.svg" alt="React" />
+                                <img class="w-12" src="img/b.svg" alt="Bootstrap" />
                             </div>
                         </section>
-                    </section>
+                        <section class="p-1 md:w-1/3">
+                            <h3 class="mb-3 text-lg font-semibold">BackEnd</h3>
+                            <div class="p-3 rounded flex flex-wrap gap-3 shadow-md md:gap-5 justify-center">
+                                <img class="w-12" src="img/js.svg" alt="JavaScript" />
+                                <img class="w-12" src="img/ts.svg" alt="TypeScript" />
+                                <img class="w-12" src="img/node.svg" alt="Node JS" />
+                                <img class="w-12" src="img/express.svg" alt="Express JS" />
+                                <img class="w-12" src="img/mongo.svg" alt="Mongo DB" />
+                                <img class="w-12" src="img/ts.svg" alt="TypeScript" />
+                                <img class="w-12" src="img/react.svg" alt="React" />
+                                <img class="w-12" src="img/b.svg" alt="Bootstrap" />
+                            </div>
+                        </section>
+                        <section class="p-1 md:w-1/3">
+                            <h3 class="ml-2 mb-3 text-lg font-semibold">DevOps</h3>
+                            <div class="p-3 rounded flex flex-wrap gap-3 shadow-md md:gap-5 md:justify-center md:h-[140px]">
+                                <img class="w-12" src="img/git.svg" alt="Git" />
+                                <img class="w-12" src="img/aws.svg" alt="AWS" />
+                            </div>
+                        </section>
+                    </div>
                 </section>
                 <hr />
+
                 <section>
-                    <h2>Project</h2>
+                    <h3
+                        class="mb-2 md:mb-3 text-2xl md:text-3xl text-[#35C4ED] font-semibold after:content-[' '] after:inline-block after:w-1.5 after:h-1.5 after:bg-[#35C4ED] after:align-text-top after:rounded-full after:-ml-1"
+                    >
+                        Project
+                    </h3>
                     <ul>
-                        <li>
-                            <h3>프로젝트 이름</h3>
-                            <a href="#">바로가기</a>
-                            <p>기간</p>
-                            <p>프로젝트 소개</p>
+                        <li class="p-1 mb-5">
+                            <div class="flex gap-3 items-end">
+                                <h3 class="text-xl font-semibold after:content-['|'] after:ml-2">개인 프로젝트1</h3>
+                                <a href="#"><img src="img/github.svg" alt="깃허브 바로가기" class="w-5 pb-1" /></a>
+                                <a href="#" class="align-bottom">데모↗</a>
+                            </div>
+                            <p class="text-gray-400">2022. 10. 27 - 2022. 11. 04</p>
+                            <ul class="ml-5 list-disc">
+                                <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                                <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                                <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                            </ul>
+                        </li>
+
+                        <li class="p-1 mb-5">
+                            <div class="flex gap-3 items-end">
+                                <h3 class="text-xl text-[#35C4ED] font-semibold after:content-['|'] after:text-black after:ml-2">감귤마켓</h3>
+                                <a href="#"><img src="img/github.svg" alt="깃허브 바로가기" class="w-5 pb-1" /></a>
+                                <a href="#" class="align-bottom">데모↗</a>
+                            </div>
+                            <p class="text-gray-400">2022. 11. 03 - 진행 중</p>
+                            <ul class="ml-5 list-disc">
+                                <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                                <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                                <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                            </ul>
+                        </li>
+
+                        <li class="p-1 mb-5">
+                            <div class="flex gap-3 items-end">
+                                <h3 class="text-xl font-semibold after:content-['|'] after:ml-2">랜딩 페이지</h3>
+                                <a href="#"><img src="img/github.svg" alt="깃허브 바로가기" class="w-5 pb-1" /></a>
+                                <a href="#" class="align-bottom">데모↗</a>
+                            </div>
+                            <p class="text-gray-400">2022. 10. 03 - 2022. 10. 04</p>
+                            <ul class="ml-5 list-disc">
+                                <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                                <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                                <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                            </ul>
+                        </li>
+
+                        <li class="p-1 mb-5">
+                            <div class="flex gap-3 items-end">
+                                <h3 class="text-xl text-[#35C4ED] font-semibold after:content-['|'] after:text-black after:ml-2">디자인 공모전</h3>
+                                <a href="#"><img src="img/github.svg" alt="깃허브 바로가기" class="w-5 pb-1" /></a>
+                                <a href="#" class="align-bottom">데모↗</a>
+                            </div>
+                            <p class="text-gray-400">2022. 09. 26 - 2022. 09. 28</p>
+                            <ul class="ml-5 list-disc">
+                                <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                                <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                                <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                            </ul>
+                        </li>
+
+                        <li class="p-1 mb-5">
+                            <div class="flex gap-3 items-end">
+                                <h3 class="text-xl text-[#35C4ED] font-semibold after:content-['|'] after:text-black after:ml-2">벤딩머신</h3>
+                                <a href="#"><img src="img/github.svg" alt="깃허브 바로가기" class="w-5 pb-1" /></a>
+                                <a href="#" class="align-bottom">데모↗</a>
+                            </div>
+                            <p class="text-gray-400">2022. 09. 24 - 2022. 09. 26.</p>
+                            <ul class="ml-5 list-disc">
+                                <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                                <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                                <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                            </ul>
+                        </li>
+
+                        <li class="p-1 mb-5">
+                            <div class="flex gap-3 items-end">
+                                <h3 class="text-xl font-semibold after:content-['|'] after:ml-2">1만 시간의 법칙</h3>
+                                <a href="#"><img src="img/github.svg" alt="깃허브 바로가기" class="w-5 pb-1" /></a>
+                                <a href="#" class="align-bottom">데모↗</a>
+                            </div>
+                            <p class="text-gray-400">2022. 09. 03 - 2022. 09. 04</p>
+                            <ul class="ml-5 list-disc">
+                                <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                                <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                                <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                            </ul>
                         </li>
                     </ul>
                 </section>
                 <hr />
+
                 <section>
-                    <h2>수상</h2>
+                    <h2
+                        class="mb-2 md:mb-3 text-2xl md:text-3xl text-[#35C4ED] font-semibold after:content-[' '] after:inline-block after:w-1.5 after:h-1.5 after:bg-[#35C4ED] after:align-text-top after:rounded-full after:-ml-1"
+                    >
+                        Award
+                    </h2>
                     <ul>
-                        <li>수상정보</li>
+                        <li class="mb-3 flex gap-5 justify-between md:flex-col md:gap-0 md:items-start items-center">
+                            <p class="inline-block text-lg md:text-xl font-semibold before:content-['|'] before:mr-2 truncate">디자인 공모전 입상</p>
+                            <p class="inline-block text-sm text-gray-400 shrink-0 md:pl-3">2022.10</p>
+                        </li>
+                        <li class="mb-3 flex gap-5 justify-between md:flex-col md:gap-0 md:items-start items-center">
+                            <p class="inline-block text-lg md:text-xl font-semibold before:content-['|'] before:mr-2 truncate">멋쟁이사자차럼</p>
+                            <p class="inline-block text-sm text-gray-400 shrink-0 md:pl-3">2022.08</p>
+                        </li>
                     </ul>
                 </section>
                 <hr />
+
                 <section>
-                    <h2>학력</h2>
+                    <h2
+                        class="mb-2 md:mb-3 text-2xl md:text-3xl text-[#35C4ED] font-semibold after:content-[' '] after:inline-block after:w-1.5 after:h-1.5 after:bg-[#35C4ED] after:align-text-top after:rounded-full after:-ml-1"
+                    >
+                        Education
+                    </h2>
                     <ul>
-                        <li>
-                            <p>학력정보</p>
-                            <p>기간</p>
+                        <li class="mb-3 md:mb-5">
+                            <div class="flex justify-between items-center md:flex-col md:gap-0 md:items-start">
+                                <p class="inline-block text-lg md:text-2xl font-semibold before:content-['|'] before:mr-1">프론트엔드스쿨 3기</p>
+                                <p class="inline-block text-sm md:text-md text-gray-400 md:pl-3">2022.08 - 2023.01</p>
+                            </div>
+
+                            <p class="pl-2 text-gray-400 md:text-lg">(주)멋쟁이사자처럼</p>
+                        </li>
+                        <li class="mb-3 md:mb-5">
+                            <div class="flex justify-between items-center md:flex-col md:gap-0 md:items-start">
+                                <p class="inline-block text-lg md:text-2xl font-semibold before:content-['|'] before:mr-2">성균관대학교</p>
+                                <p class="inline-block text-sm md:text-md text-gray-400 shrink-0 md:pl-3">2018.03 - 2022.02</p>
+                            </div>
+
+                            <p class="pl-2 text-gray-400 md:text-lg">컴퓨터교육과 학사</p>
                         </li>
                     </ul>
                 </section>
